--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "gulp": "^4.0.2",
     "gulp-sass": "^5.1.0",
     "sass": "^1.57.1"
+  },
+  "dependencies": {
+    "toastify-js": "^1.12.0"
   }
 }
